--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
     "react-linkify-it": "^1.0.7",
+    "react-pdf": "^7.1.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
