--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-linkify-it": "^1.0.7",
     "react-pdf": "^7.1.2",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
